# semantic_front_end_filter

./: .gitignore  .gitmodules  README.md  environment.yaml  pareto-front.html  pc=10_pareto-front.html  pc=larger_pareto-front.html  setup.py  slurm-10771236.out  test.py
Data/Reconstruct_2022-04-24-18-35-59_0/: GroundMap.msgpack  data_extraction.yaml
Labelling/: Extract.py  ExtractDepthImage.py  GroundfromTrajs.py  README.md  data_extraction_SA.yaml  drawTimePlot.py  extractFeetTrajsFromRosbag.py  extractPointCloudFromRosbag.py  extractPredictionFromRosbag.py  extract_depth_images.ipynb  getGroundFromTrajs.ipynb  visualizeDatum.py  visualizeDepthImage.py
Labelling/messages/: imageMessage.py  messageToVectors.py  pointcloudMessage.py
adabins/: README.md  args_train.txt  cfg.py  data_slim.py  dataloader.py  elevation_vis.py  evaluate.py  experimentSaver.py  loss.py  lsf.o220112080  pointcloudUtils.py  rosvis.py  rosvis_replay.py  test4dInput.py  train.py  utils.py  vismodel.py  vismodel_ycy.py
adabins/cfgs/: prediction_replay.rviz  visulize_prediction_replay.rviz
adabins/models/: download_and_save_basemodel.py  unet_adaptive_bins.py
anymal_c_subt_semantic_front_end_filter/: CMakeLists.txt  package.xml
anymal_c_subt_semantic_front_end_filter/config/: 2022-07-08-09-05-19_anymal-cerberus-lpc_mission.yaml
anymal_c_subt_semantic_front_end_filter/config/calibrations/inspection_head/zoom/: cam.yaml
anymal_c_subt_semantic_front_end_filter/config/extension/: none.yaml  replay.yaml
anymal_c_subt_semantic_front_end_filter/config/feature_toggles/mission_autonomy/: sim.yaml
anymal_c_subt_semantic_front_end_filter/config/feature_toggles/mission_control_network/: sim.yaml  sim_control_center.yaml
anymal_c_subt_semantic_front_end_filter/config/feature_toggles/simulation/: navigation_sim.yaml
anymal_c_subt_semantic_front_end_filter/config/nimbro/: robots_sim_control_center_settings.yaml  shared_settings.yaml
anymal_c_subt_semantic_front_end_filter/config/non_ros/perception/point_cloud_filter/: pointmatcher_filters_bpearl.yaml
anymal_c_subt_semantic_front_end_filter/config/setup/: sim_subt_inspection.yaml
anymal_c_subt_semantic_front_end_filter/config/ui/: artifacts_reporting_check.rviz  bpearl_tuning.rviz  config.rviz  rqt.perspective
anymal_c_subt_semantic_front_end_filter/config/ui/ignition_gazebo/: ign_config.rviz  ign_rqt.perspective
anymal_c_subt_semantic_front_end_filter/config/ui/mission_control/: rqt.perspective
anymal_c_subt_semantic_front_end_filter/config/ui/mission_setup/: mission_setup_config.rviz  mission_setup_rqt.perspective
anymal_c_subt_semantic_front_end_filter/config/ui/replay/: config.rviz  replay_planner.rviz
anymal_c_subt_semantic_front_end_filter/launch/: detectApriltag_from_reconstruct.launch  inspection_sim.launch  load_config.launch  mapping.launch  mission_control.launch  mission_setup.launch  record.launch  replay_common.launch  replay_mission.launch  replay_with_map.launch  replay_with_map_Italy.launch  replayandrecord.launch  sim.launch  sim_lite.launch  simple_demo.launch
anymal_c_subt_semantic_front_end_filter/src/: simple_demo_node.cpp
anymal_c_subt_semantic_front_end_filter/urdf/face/: sim_bpearl_front_face_parameters.yaml
kpconv/: README.md  train_Anymal.py  train_Unet.py
kpconv/datasets/: Anymal.py  AnymalImage.py  common.py
kpconv/models/: architectures.py
kpconv/utils/: unet_evaluate.py
rsc/robot/: anymal_cerberus_subt.urdf
scripts/: draw_elevation_error_graph.py  paperInfo.ipynb  paper_rviz_draw.ipynb
semantic_front_end_filter/: __init__.py
semantic_front_end_filter/.Labelling/: EdgeAwareLoss.py  ExtractDepthImage.py  data_extraction_SA.yaml  extractPointCloudFromRosbag.py  extractPredictionFromRosbag.py  getContactPoints.py  visualizeDatum.py
semantic_front_end_filter/.adabins/: data_slim.py  elevation_eval_util.py  train.py  vismodel_video.py  vismodel_ycy.py
semantic_front_end_filter/Labelling/: ExtractDepthImage.py  ExtractLocalDepthImage.py  GroundfromTrajs.py  README.md  csf.py  data_extraction_Italy.yaml  data_extraction_SA.yaml  evalAll.py  evalIoU.py  evalIoU_cuda.py  evalwithGT.py  extractFeetTrajsFromRosbag.py  extractPointCloudFromRosbag.py  segments_ai_utils.py  visualizeDepthImage.py
semantic_front_end_filter/adabins/: README.md  cfg.py  cfgUtils.py  data_slim.py  dataloader.py  elevation_eval_util.py  elevation_vis.py  evaluate.py  loss.py  model_io.py  pointcloudUtils.py  rosvis.py  train.py  train_optuna.py  utils.py  vismodel_video.py  vismodel_ycy.py
semantic_front_end_filter/cfgs/: ModelConfig.yaml  TrainConfig.yaml  __init__.py  cfg.py  data_extraction_SA.yaml
semantic_front_end_filter/common/: __init__.py  gridmap_ros_util.py  rosbagPlayer.py
semantic_front_end_filter_ros/: CMakeLists.txt  package.xml
semantic_front_end_filter_ros/config/feature_toggles/mission_autonomy/: real.yaml
semantic_front_end_filter_ros/config/non_ros/alphasense/: alphasense_config.yaml
semantic_front_end_filter_ros/config/non_ros/local_guidance/: controllers.yaml
semantic_front_end_filter_ros/config/setup/: sim_subt.yaml  sim_subt_lite.yaml
semantic_front_end_filter_ros/config/ui/: config.rviz  local_maps.rviz  local_maps_2.rviz
semantic_front_end_filter_ros/config/ui/replay/: config.rviz
semantic_front_end_filter_ros/configs/: bagplay_concept.rviz  bagplay_eleverr.rviz  bagplay_elevmap.rviz  bagplay_footholds.rviz  elevmap_pred.yaml  elevmap_raw.yaml
semantic_front_end_filter_ros/launch/: elevation_mapping_cupy.launch  replay_with_localmaps.launch  robotparam_and_rviz.launch  vis_map.launch
semantic_front_end_filter_ros/scripts/: camera_info_publisher.py  deploy_foward.py  deploy_foward_three_cam.py  dummy_publisher.py  rosvis.py  rosvis_replay.py  test_foward.py
semantic_front_end_filter_ros/src/: display_local_maps_node.cpp  simple_demo_node.cpp
semantic_front_end_filter_ros/urdf/: anymal_c_subt.urdf.xacro
semantic_frontend_filter/: CMakeLists.txt  package.xml
tests/: readme.md  test_dummy.py  test_elevation_eval_util.py  test_elevation_map.py
(+57 files in other folders)
